--- a/Lab03_PreparingTheEnvironment.yml
+++ b/Lab03_PreparingTheEnvironment.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
+  become_user: root
   become: yes
-  gather_facts: no
 
   tasks:
   - name: Install OpenStack Platform Utilities
